Fix dialog alignment

--- a/src/style.css
+++ b/src/style.css
@@ -54,7 +54,6 @@ footer {
 .comment-popup {
   position: absolute;
   top: 20px;
-  left: 10%;
   width: 80%;
   background-color: aqua;
   height: 700px;
